Add new ACF blocks for main page

--- a/simple-theme/style.css
+++ b/simple-theme/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: WPWP Carcas
-Version: 2023.02.12
+Theme Name: Simple Theme
+Version: 2024.09.09
 Description:  Blank WordPress Theme.
-Author: Petro Senyo
+Author: Leva Lukianov
 Author URI: None
 
 License:            MIT License
