--- a/simple-theme/assets/scss/lading-style.css
+++ b/simple-theme/assets/scss/lading-style.css
@@ -1674,3 +1674,15 @@ footer .bg-el-2 {
     font-size: 12px;
   }
 }/*# sourceMappingURL=lading-style.css.map */
+
+@media screen and (max-width: 1400px) and (min-width: 951px) {
+  .contact_us{
+    margin-top: 80px;
+  }
+}
+
+@media screen and (max-width: 950px) and (min-width: 750px) {
+  .contact_us{
+    margin-top: 40px;
+  }
+}
