--- a/simple-theme/assets/scss/lading-style.css
+++ b/simple-theme/assets/scss/lading-style.css
@@ -444,6 +444,8 @@ footer .bg-el-2 {
   left: 0;
   top: 0;
   opacity: 0;
+  background-position: center;
+  background-repeat: no-repeat;
   transition: 0.3s ease-in-out;
 }
 .btn-gren .ico {
@@ -1673,16 +1675,243 @@ footer .bg-el-2 {
   .map-block .flex-wrapper .right-container .card p {
     font-size: 12px;
   }
-}/*# sourceMappingURL=lading-style.css.map */
+}
 
 @media screen and (max-width: 1400px) and (min-width: 951px) {
-  .contact_us{
+  .contact_us {
     margin-top: 80px;
   }
 }
-
 @media screen and (max-width: 950px) and (min-width: 750px) {
-  .contact_us{
+  .contact_us {
     margin-top: 40px;
   }
 }
+.pop-up-contact {
+  border-radius: 20px;
+  border: 0.5px solid #D6D6D6;
+  background: linear-gradient(180deg, #FFF 0%, #F4F4F4 50.06%, #FFF 100%);
+  box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.05);
+  padding: 110px 20px;
+  position: relative;
+  z-index: 0;
+  width: 1240px;
+  max-width: 100%;
+}
+@media (max-width: 750px) {
+  .pop-up-contact {
+    padding: 20px;
+  }
+}
+.pop-up-contact::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  background-image: url(/wp-content/uploads/2024/09/popup-bg.svg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
+.pop-up-contact .el-bg-1 {
+  position: absolute;
+  left: 0;
+  top: 0;
+  max-width: 50%;
+  height: auto;
+  z-index: -2;
+}
+.pop-up-contact .el-bg-2 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  max-width: 50%;
+  height: auto;
+  z-index: -2;
+}
+.pop-up-contact .flex-wrapper {
+  display: flex;
+  justify-content: center;
+}
+.pop-up-contact .form-item {
+  margin-bottom: 24px;
+}
+@media (max-width: 750px) {
+  .pop-up-contact .form-item {
+    margin-bottom: 16px;
+  }
+}
+.pop-up-contact .form-item input {
+  width: 100%;
+  height: 57px;
+  padding: 14px 24px;
+  border-radius: 10px;
+  border: 1px solid #F1F1F1;
+  background: #FFF;
+  overflow: hidden;
+  color: #1A1A1A;
+  text-overflow: ellipsis;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 492;
+  line-height: 150%;
+}
+@media (max-width: 750px) {
+  .pop-up-contact .form-item input {
+    font-size: 12px;
+    height: 49px;
+    border-radius: 6px;
+  }
+}
+.pop-up-contact .form-item input::-moz-placeholder {
+  color: #1A1A1A;
+  font-family: "TT Interfaces";
+}
+.pop-up-contact .form-item input::placeholder {
+  color: #1A1A1A;
+  font-family: "TT Interfaces";
+}
+.pop-up-contact .form-item textarea {
+  width: 100%;
+  height: 118px;
+  padding: 14px 24px;
+  border-radius: 10px;
+  border: 1px solid #F1F1F1;
+  background: #FFF;
+  overflow: hidden;
+  color: #1A1A1A;
+  text-overflow: ellipsis;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 492;
+  resize: none;
+  line-height: 150%;
+}
+@media (max-width: 750px) {
+  .pop-up-contact .form-item textarea {
+    font-size: 14px;
+    height: 115px;
+    border-radius: 6px;
+  }
+}
+.pop-up-contact .form-item textarea::-moz-placeholder {
+  color: #1A1A1A;
+  font-family: "TT Interfaces";
+}
+.pop-up-contact .form-item textarea::placeholder {
+  color: #1A1A1A;
+  font-family: "TT Interfaces";
+}
+.pop-up-contact .h2 {
+  text-align: center;
+}
+@media (max-width: 750px) {
+  .pop-up-contact .h2 {
+    text-align: left;
+    margin-bottom: 32px;
+  }
+}
+.pop-up-contact .btn-gren {
+  width: 100%;
+  background-color: transparent;
+  color: #11BA5F;
+}
+@media (max-width: 750px) {
+  .pop-up-contact .btn-gren {
+    margin-top: auto;
+    margin-top: 250px;
+  }
+}
+.pop-up-contact .close {
+  position: absolute;
+  z-index: 5;
+  right: 40px;
+  top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 10px;
+  background: #FFF;
+  box-shadow: 0px 0px 18.6px 0px rgba(0, 0, 0, 0.09);
+  cursor: pointer;
+}
+@media (max-width: 750px) {
+  .pop-up-contact .close {
+    width: 36px;
+    height: 36px;
+    right: 20px;
+    top: 20px;
+  }
+  .pop-up-contact .close svg {
+    width: 12px;
+    height: 12px;
+  }
+}
+
+.fancybox__slide {
+  padding: 5px;
+}
+
+.fancybox__content > .carousel__button.is-close {
+  display: none;
+}
+
+.fancybox__content :focus:not(.carousel__button.is-close) {
+  outline: none;
+  box-shadow: none;
+}
+
+.pop-up-thank-you {
+  border-radius: 20px;
+  border: 0.5px solid #D6D6D6;
+  background: linear-gradient(180deg, #FFF 0%, #F4F4F4 50.06%, #FFF 100%);
+  box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.05);
+  padding: 50px 40px;
+}
+.pop-up-thank-you .titl {
+  color: #1A1A1A;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 492;
+  line-height: 110%;
+  margin-bottom: 14px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+@media (max-width: 750px) {
+  .pop-up-thank-you .titl {
+    font-size: 26px;
+  }
+}
+.pop-up-thank-you .desc {
+  color: #1A1A1A;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  letter-spacing: -0.32px;
+  text-align: center;
+}
+@media (max-width: 750px) {
+  .pop-up-thank-you .desc {
+    font-size: 14px;
+  }
+}
+
+.screen-reader-response {
+  display: none;
+}
+
+.form-row + .wpcf7-response-output {
+  margin-top: 5px;
+  display: none;
+}
+
+.wpcf7-not-valid-tip {
+  padding-top: 5px;
+  display: block;
+}/*# sourceMappingURL=lading-style.css.map */
